# poker-mccfrm

./: .gitignore  CMakeLists.txt  README.md
include/boost_1_83_0/bin.v2/: project-cache.jam
include/boost_1_83_0/stage/lib/: libboost_atomic.so.1.83.0  libboost_iostreams.so.1.83.0  libboost_locale.so.1.83.0  libboost_log.so.1.83.0
include/boost_1_83_0/stage/lib/cmake/boost_atomic-1.83.0/: boost_atomic-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_chrono-1.83.0/: boost_chrono-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_container-1.83.0/: boost_container-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_context-1.83.0/: boost_context-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_contract-1.83.0/: boost_contract-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_coroutine-1.83.0/: boost_coroutine-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_date_time-1.83.0/: boost_date_time-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_exception-1.83.0/: boost_exception-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_fiber-1.83.0/: boost_fiber-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_filesystem-1.83.0/: boost_filesystem-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_graph-1.83.0/: boost_graph-config.cmake  libboost_graph-variant-static.cmake
include/boost_1_83_0/stage/lib/cmake/boost_graph_parallel-1.83.0/: boost_graph_parallel-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_headers-1.83.0/: boost_headers-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_iostreams-1.83.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-static.cmake
include/boost_1_83_0/stage/lib/cmake/boost_json-1.83.0/: boost_json-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_locale-1.83.0/: boost_locale-config.cmake  libboost_locale-variant-shared.cmake  libboost_locale-variant-static.cmake
include/boost_1_83_0/stage/lib/cmake/boost_log-1.83.0/: boost_log-config.cmake  libboost_log-variant-static.cmake
include/boost_1_83_0/stage/lib/cmake/boost_log_setup-1.83.0/: boost_log_setup-config.cmake  libboost_log_setup-variant-static.cmake
include/boost_1_83_0/stage/lib/cmake/boost_math_c99-1.83.0/: boost_math_c99-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_math_c99f-1.83.0/: boost_math_c99f-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_math_c99l-1.83.0/: boost_math_c99l-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_math_tr1-1.83.0/: boost_math_tr1-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_math_tr1f-1.83.0/: boost_math_tr1f-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_math_tr1l-1.83.0/: boost_math_tr1l-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_mpi-1.83.0/: boost_mpi-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_nowide-1.83.0/: boost_nowide-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_prg_exec_monitor-1.83.0/: boost_prg_exec_monitor-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_program_options-1.83.0/: boost_program_options-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_random-1.83.0/: boost_random-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_regex-1.83.0/: boost_regex-config.cmake  libboost_regex-variant-static.cmake
include/boost_1_83_0/stage/lib/cmake/boost_serialization-1.83.0/: boost_serialization-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_stacktrace_addr2line-1.83.0/: boost_stacktrace_addr2line-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_stacktrace_backtrace-1.83.0/: boost_stacktrace_backtrace-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_stacktrace_basic-1.83.0/: boost_stacktrace_basic-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_stacktrace_noop-1.83.0/: boost_stacktrace_noop-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_system-1.83.0/: boost_system-config.cmake
include/boost_1_83_0/stage/lib/cmake/boost_test_exec_monitor-1.83.0/: boost_test_exec_monitor-config.cmake
include/onetbb/lib/: libtbbmalloc.so.2.11  libtbbmalloc_proxy.so.2.11
include/onetbb/lib/cmake/TBB/: TBBTargets-relwithdebinfo.cmake
include/onetbb/lib/pkgconfig/: tbb.pc
include/parallel_hashmap/: phmap_base.h
src/: CMakeLists.txt  main.cpp
src/abstraction/: CMakeLists.txt
src/abstraction/include/abstraction/: chance_state.h  community_info.h  global.h  infoset.h  play_state.h  player_info.h  state.h  terminal_state.h
src/abstraction/src/: chance_state.cpp  community_info.cpp  global.cpp  infoset.cpp  play_state.cpp  player_info.cpp  state.cpp  terminal_state.cpp
src/algorithm/: CMakeLists.txt
src/algorithm/include/algorithm/: ai_player.h  game.h  interactive_player.h  kmeans.h  player.h  trainer.h  trainer_manager.h
src/algorithm/src/: ai_player.cpp  game.cpp  interactive_player.cpp  kmeans.cpp  player.cpp  trainer.cpp  trainer_manager.cpp
src/binary/: CMakeLists.txt  main.cpp  state.cpp
src/binary/include/binary/: infoset.h  main.h  state.h  trainer.h
src/enums/: CMakeLists.txt
src/enums/include/enums/: action.h  betting_round.h  hand_ranking.h  rank.h  suit.h
src/enums/src/: action.cpp  betting_round.cpp  hand_ranking.cpp  rank.cpp  suit.cpp
src/game/: CMakeLists.txt  card.cpp  card.h
src/game/enums/: rank.cpp  rank.h  suit.cpp  suit.h
src/game/include/game/: card.h  deck.h  hand.h  hand_strength.h
src/game/src/: card.cpp  deck.cpp  hand.cpp  hand_strength.cpp
src/tables/: CMakeLists.txt
src/tables/include/tables/: ehs_table.h  emd_table.h  evaluator.h  hand_indexer.h  ochs_table.h
src/tables/src/: ehs_table.cpp  emd_table.cpp  evaluator.cpp  hand_indexer.cpp  ochs_table.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: random.h  utils.h
src/utils/src/: utils.cpp
terraform/: main.tf
test/: CMakeLists.txt  card.cpp  chance_state.cpp  deck.cpp  evaluator.cpp  hand.cpp  hand_indexer.cpp  hand_strength.cpp  play_state.cpp  state.cpp  state_2_players.cpp  terminal_state.cpp
(+7 files in other folders)
